\name{edgeRnews}
\title{edgeR News}
\encoding{UTF-8}

\section{Version 1.1.1}{\itemize{
\item
Adding DEXSeqIntEREst() function that runs DEXSeq differential exon usage or 
intron retention test on the SummarizedExperiment objects (resulted from 
interest() or interest.sequential() analysis).

\item
Importing required functions from the DEXSeq package.

}}
