@@ -4,7 +4,8 @@ export(interest, interest.sequential, InterestResult, getAnnotation,
 	exactTestInterest, glmInterest, qlfInterest, treatInterest, eBayesInterest, 
 	u12BoxplotNb, u12DensityPlot, u12DensityPlotIntron, lfc, getRepeatTable, 
 	u12Boxplot, annotateU12, intexIndex, buildSsTypePwms, updateRowDataCol, 
-	counts.InterestResults, plot.InterestResult, intexBoxplot, DEXSeqIntEREst)
+	counts.InterestResults, plot.InterestResult, intexBoxplot, DEXSeqIntEREst,
+	unionRefTr)
 exportMethods(counts, plot, boxplot)
 import(graphics, grDevices, utils, grid, methods, SummarizedExperiment)
 importFrom(Biostrings, getSeq, matchPWM, PWM, unitScale, reverseComplement, 
