@@ -2,7 +2,7 @@ u12DensityPlot<-function(x, type=c("U12", "U2Up", "U2Dn", "U2UpDn", "U2Rand"),
 	fcType="edgeR", sampleAnnotation=c(),  sampleAnnoCol=c(), group=c(), 
 	intExCol="int_ex", intTypeCol="int_type", intronExon, strandCol="strand", 
 	geneIdCol="collapsed_transcripts", naUnstrand=FALSE, col=1, lty=1, lwd=1, 
-	plotLegend=TRUE, cexLegend=1, xLegend="topright", yLegend=NULL, legend=c(), 
+	plotLegend=TRUE, cexLegend=1, xLegend="topright", yLegend=NULL, legend=c(),
 	randomSeed=NULL, xlab="", ...){
 	#Check parameters
 	object=x
@@ -28,14 +28,26 @@ u12DensityPlot<-function(x, type=c("U12", "U2Up", "U2Dn", "U2UpDn", "U2Rand"),
 		stop(msg)
 	}
 
+	#Check type availability for data
+	if(length(which(c("U2Up", "U2Dn", "U2UpDn") %in% type))>0 & 
+		length(which("intron" %in% 
+			SummarizedExperiment::rowData(object)[,intExCol]))==0){
+		msg<-
+"Plotting types 'U12', 'U2Rand' are available for references with exons only."
+		stop(msg)
+
+	}
+	
+
 	fcRes=lfc(object, fcType=fcType, sampleAnnoCol=sampleAnnoCol, 
 		sampleAnnotation=sampleAnnotation, group=group)
-	u12Ind=u12Index(object,intExCol=intExCol, intTypeCol=intTypeCol)
-	u12NbInd=u12NbIndex(object,intExCol=intExCol, intTypeCol=intTypeCol, 
+	u12Ind= u12Index(object,intExCol=intExCol, intTypeCol=intTypeCol, 
+	intronExon=intronExon)
+	u12NbInd= u12NbIndex(object,intExCol=intExCol, intTypeCol=intTypeCol, 
 		strandCol=strandCol, geneIdCol=geneIdCol, naUnstrand=naUnstrand)
 	uniStrand=unique(SummarizedExperiment::rowData(object)[,strandCol])
 	definedStrand=uniStrand[uniStrand!="*"]
-	listPlot=c()	
+	listPlot=c()
 	if(intronExon=="intron"){
 		if("U12" %in% type)
 			listPlot=c(listPlot, list(U12_introns=fcRes[u12Ind]))
@@ -58,34 +70,42 @@ u12DensityPlot<-function(x, type=c("U12", "U2Up", "U2Dn", "U2UpDn", "U2Rand"),
 			listPlot=c(listPlot, list(random_U2_introns=fcRes[randInd]))
 		}
 	} else if(intronExon=="exon"){
-		upIndU2Tmp1=u12NbInd$upExon-1
-		upIndU2Tmp2=u12NbInd$upExon-2
-		upIndU2Tmp1[u12NbInd$upExon>u12NbInd$downExon]=
-			u12NbInd$upExon[u12NbInd$upExon>u12NbInd$downExon]+1
-		upIndU2Tmp2[u12NbInd$upExon>u12NbInd$downExon]=
-			u12NbInd$upExon[u12NbInd$upExon>u12NbInd$downExon]+2
-		dnIndU2Tmp1=u12NbInd$downExon+1
-		dnIndU2Tmp2=u12NbInd$downExon+2
-		dnIndU2Tmp1[u12NbInd$upExon>u12NbInd$downExon]=
-			u12NbInd$downExon[u12NbInd$upExon>u12NbInd$downExon]-1
-		dnIndU2Tmp2[u12NbInd$upExon>u12NbInd$downExon]=
-			u12NbInd$downExon[u12NbInd$upExon>u12NbInd$downExon]-2
-
-		upIndsU2=unique(c(upIndU2Tmp1, upIndU2Tmp2))
-		dnIndsU2=unique(c(dnIndU2Tmp1, dnIndU2Tmp1))
-		upIndsU12=u12NbInd$upExon
-		dnIndsU12=u12NbInd$downExon
-		upIndsU2=unique(upIndsU2[which(!is.na(upIndsU2))])
-		dnIndsU2=unique(dnIndsU2[which(!is.na(dnIndsU2))])
-		upIndsU12=unique(upIndsU12[which(!is.na(upIndsU12))])
-		dnIndsU12=unique(dnIndsU12[which(!is.na(dnIndsU12))])
-		upDnIndsU2=unique(c(upIndsU2,dnIndsU2))[
-			which(is.na(match(unique(c(upIndsU2,dnIndsU2)), 
-				c(upIndsU12,dnIndsU12))))]
-
-		if("U12" %in% type)
-			listPlot=c(listPlot, list(U12_introns=
-				fcRes[unique(c(upIndsU12, dnIndsU12))]))
+		if(length(which(c("U2Up", "U2Dn", "U2UpDn") %in% type))>0){
+			upIndU2Tmp1=u12NbInd$upExon-1
+			upIndU2Tmp2=u12NbInd$upExon-2
+			upIndU2Tmp1[u12NbInd$upExon>u12NbInd$downExon]=
+				u12NbInd$upExon[u12NbInd$upExon>u12NbInd$downExon]+1
+			upIndU2Tmp2[u12NbInd$upExon>u12NbInd$downExon]=
+				u12NbInd$upExon[u12NbInd$upExon>u12NbInd$downExon]+2
+			dnIndU2Tmp1=u12NbInd$downExon+1
+			dnIndU2Tmp2=u12NbInd$downExon+2
+			dnIndU2Tmp1[u12NbInd$upExon>u12NbInd$downExon]=
+				u12NbInd$downExon[u12NbInd$upExon>u12NbInd$downExon]-1
+			dnIndU2Tmp2[u12NbInd$upExon>u12NbInd$downExon]=
+				u12NbInd$downExon[u12NbInd$upExon>u12NbInd$downExon]-2
+	
+			upIndsU2=unique(c(upIndU2Tmp1, upIndU2Tmp2))
+			dnIndsU2=unique(c(dnIndU2Tmp1, dnIndU2Tmp1))
+			upIndsU12=u12NbInd$upExon
+			dnIndsU12=u12NbInd$downExon
+			upIndsU2=unique(upIndsU2[which(!is.na(upIndsU2))])
+			dnIndsU2=unique(dnIndsU2[which(!is.na(dnIndsU2))])
+			upIndsU12=unique(upIndsU12[which(!is.na(upIndsU12))])
+			dnIndsU12=unique(dnIndsU12[which(!is.na(dnIndsU12))])
+			upDnIndsU2=unique(c(upIndsU2,dnIndsU2))[
+				which(is.na(match(unique(c(upIndsU2,dnIndsU2)), 
+					c(upIndsU12,dnIndsU12))))]
+		}
+		if("U12" %in% type){
+			if(length(which("intron" %in% 
+				SummarizedExperiment::rowData(object)[,intExCol]))>0){
+				listPlot=c(listPlot, list(U12_introns=
+					fcRes[unique(c(upIndsU12, dnIndsU12))]))
+			} else {
+				listPlot=c(listPlot, list(U12_introns=
+					fcRes[unique(u12Ind)]))
+			}
+		}
 		if("U2Up" %in% type)
 			listPlot=c(listPlot, list(Upstream_U2_introns=
 				fcRes[ upIndsU2[which(is.na(match(upIndsU2, 
@@ -102,7 +122,7 @@ u12DensityPlot<-function(x, type=c("U12", "U2Up", "U2Dn", "U2UpDn", "U2Rand"),
 			allExonsInd=which(SummarizedExperiment::rowData(object)[,
 				intExCol]=="exon")
 			randInd=sample(allExonsInd[ which(is.na(match(allExonsInd, 
-				unique(c(upIndsU12, dnIndsU12)) )))], length(u12Ind))
+				unique(c(u12Ind)) )))], length(u12Ind))
 			listPlot=c(listPlot, list(random_U2_introns=fcRes[randInd]))
 		}
 	}
